* Mon Jun 09 2025 Steven Pritchard <steve@sicura.us> - 8.9.0
- Add a `agent_package` parameter to allow using something other
  than `puppet-agent` (#192)

* Mon Jun 09 2025 Steven Pritchard <steve@sicura.us> - 8.8.2
- Support puppet-systemd 8.x
- Clean up for rubocop

* Mon Feb 10 2025 Richard Gardner <rick@sicura.us> - 8.8.1
- Cleaned up old legacy fact use.

* Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 8.8.0
- [puppetsync] Update module dependencies to support simp-iptables 7.x

* Wed Aug 07 2024 Sean Peterson <wipeters@gmail.com> - 8.7.2
- Add a [Install] for puppet_agent.timer (#186)

* Wed Jan 17 2024 Richard Gardner <rick@sicura.us> - 8.7.1
- Updated hiera.yaml facts to support puppet 8

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 8.7.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 8.6.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Sep 06 2023 Steven Pritchard <steve@sicura.us> - 8.5.0
- Add AlmaLinux 8 support
- Add support and fixes for Puppet 8 and stdlib 9
- Drop support for Puppet 6
- Update module dependencies
- Update gem dependencies
- Clean up Gemfile for rubocop

* Mon Jul 31 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.4.0
- Add RockyLinux 8 support

* Sat Jul 30 2022 Trevor Vaughan <trevor@sicura.us> - 8.3.1
- Support puppetlabs-inifile < 6

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.3.0
- Update from camptocamp/systemd to puppet/systemd

* Tue Aug 17 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0
- Change all instances of pupmod::master adding items to the `master` section to
  use `server` instead
- Update pupmod::conf to automatically switch `master` to `server`
- Automatically remove items from the puppet config in the `master` section that
  are set in the `server` section