@@ -1,30 +1,0 @@
-pupmod::master::ssl_cipher_suites:
-  - TLS_ECDH_RSA_WITH_AES_256_GCM_SHA384
-  - TLS_ECDH_RSA_WITH_AES_256_CBC_SHA384
-  - TLS_ECDH_RSA_WITH_AES_128_GCM_SHA256
-  - TLS_ECDH_RSA_WITH_AES_128_CBC_SHA256
-  - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-  - TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384
-  - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
-  - TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
-  - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
-  - TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA384
-  - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
-  - TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256
-  - TLS_ECDH_ECDSA_WITH_AES_256_GCM_SHA384
-  - TLS_ECDH_ECDSA_WITH_AES_256_CBC_SHA384
-  - TLS_ECDH_ECDSA_WITH_AES_128_GCM_SHA256
-  - TLS_ECDH_ECDSA_WITH_AES_128_CBC_SHA256
-  - TLS_DHE_RSA_WITH_AES_256_GCM_SHA384
-  - TLS_DHE_RSA_WITH_AES_256_CBC_SHA256
-  - TLS_DHE_RSA_WITH_AES_128_GCM_SHA256
-  - TLS_DHE_RSA_WITH_AES_128_CBC_SHA256
-  - TLS_RSA_WITH_AES_256_GCM_SHA384
-  - TLS_RSA_WITH_AES_256_CBC_SHA256
-  - TLS_RSA_WITH_AES_128_GCM_SHA256
-  - TLS_RSA_WITH_AES_128_CBC_SHA256
-  - TLS_DHE_DSS_WITH_AES_256_GCM_SHA384
-  - TLS_DHE_DSS_WITH_AES_256_CBC_SHA256
-  - TLS_DHE_DSS_WITH_AES_128_GCM_SHA256
-  - TLS_DHE_DSS_WITH_AES_128_CBC_SHA256
-  - TLS_EMPTY_RENEGOTIATION_INFO_SCSV
