@@ -1,0 +1,14 @@
+---
+HOSTS:
+  el9:
+    platform: el-9-x86_64
+    box: generic/rhel9
+    hypervisor: "<%= ENV.fetch('BEAKER_HYPERVISOR', 'vagrant') %>"
+    family: rhel-cloud/rhel-9
+    gce_machine_type: n1-standard-2
+CONFIG:
+  log_level: verbose
+  synced_folder: disabled
+  type: aio
+  vagrant_memsize: 512
+  puppet_collection: "<%= ENV.fetch('BEAKER_PUPPET_COLLECTION', 'openvox8') %>"
