@@ -1,6 +1,6 @@
 require 'spec_helper_acceptance'
 
-describe 'install environment via r10k and puppetserver' do
+describe 'install environment via r10k and openvox-server' do
   require_relative('lib/util')
 
   include GenerateTypesTestUtil
@@ -45,21 +45,28 @@ describe 'install environment via r10k and puppetserver' do
         install_simp_repos(master)
 
         os_maj = fact_on(master, 'os.release.major')
+        architecture = fact_on(master, 'os.architecture')
 
-        install_latest_package_on(master, 'epel-release',
-          "https://dl.fedoraproject.org/pub/epel/epel-release-latest-#{os_maj}.noarch.rpm")
+        repo_content = <<-REPO
+[openvox-release]
+name=Openvox
+baseurl=https://yum.voxpupuli.org/openvox8/el/#{os_maj}/#{architecture}/
+enabled=1
+gpgcheck=0
+REPO
+        create_remote_file(host, '/etc/yum.repos.d/openvox.repo', repo_content)
       end
 
-      it 'installs puppetserver' do
+      it 'installs openvox' do
         if on(master, 'cat /proc/sys/crypto/fips_enabled', accept_all_exit_codes: true).stdout.strip == '1'
           # Change to the following when it works for all RHEL-like OSs
           # if master.fips_mode?
           master.install_package('yum-utils')
           master.install_package('java-headless')
-          on(master, 'yumdownloader puppetserver')
-          on(master, 'rpm -i --force --nodigest --nofiledigest puppetserver*.rpm')
+          on(master, 'yumdownloader openvox-server')
+          on(master, 'rpm -i --force --nodigest --nofiledigest openvox-server*.rpm')
         else
-          master.install_package('puppetserver')
+          master.install_package('openvox-server')
         end
       end
 
