@@ -1,3 +1,8 @@
+* Wed Jul 30 2025 Mike Riddle <mike@sicura.us> - 9.0.0
+- Removed el7 support
+- Added el10 support
+- Switched the default install package to openvox instead of puppet
+
 * Mon Jun 09 2025 Steven Pritchard <steve@sicura.us> - 8.9.0
 - Add a `agent_package` parameter to allow using something other
   than `puppet-agent` (#192)
